css:working on the CSS

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
             <p class="profile-nationality">Helsinki, Finland</p>
           </figcaption>
         </figure>
-        <div>
           <ul  class="profile-poster">
             <li class="profile-post">
               <div class="profile-container-data">
@@ -47,29 +46,28 @@
               </div>
             </li>
           </ul>
-        </div>
       </section>
 
 
       <!-- Section Imagenes -->
       <section class="images">
           <figure class="figure-imagen1">
-              <img class="img-1" src="img/photo1.png" alt="imagen 1">
+              <img class="imagen" src="img/photo1.png" alt="imagen 1">
           </figure>
           <figure class="figure-imagen2">
-              <img class="img-2" src="img/photo2.png" alt="imagen 2">
+              <img class="imagen" src="img/photo2.png" alt="imagen 2">
           </figure>
           <figure class="figure-imagen3">
-              <img class="img-3" src="img/photo3.png" alt="imagen 3">
+              <img class="imagen" src="img/photo3.png" alt="imagen 3">
           </figure>
           <figure class="figure-imagen4">
-              <img class="img-4" src="img/photo_4.png" alt="imagen 4">
+              <img class="imagen" src="img/photo_4.png" alt="imagen 4">
           </figure>
           <figure class="figure-imagen5">
-              <img class="img-5" src="img/photo5.png" alt="imagen 5">
+              <img class="imagen" src="img/photo5.png" alt="imagen 5">
           </figure>
           <figure class="figure-imagen6">
-              <img class="img-6" src="img/photo6.png" alt="imagen 6">
+              <img class="imagen" src="img/photo6.png" alt="imagen 6">
           </figure>
       </section>
     </div>
