html: adding the footer

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
               <img class="imagen" src="img/photo6.png" alt="imagen 6">
           </figure>
       </section>
+
+      <footer class="section-footer">Created by <span class="footer-autor">Julio Bolivar</span>- DevChallenges.io</footer>
     </div>
   </body>
 </html>
